--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,8 @@
 fastapi==0.104.1
-uvicorn==0.24.0
+uvicorn[standard]==0.24.0
 requests==2.31.0
 faker==19.6.2
 pydantic==2.5.0
+websockets==12.0
+python-dotenv==1.0.0
+aiofiles==23.2.1
