--- a/config.env.example
+++ b/config.env.example
@@ -8,6 +8,11 @@ BITRIX24_WEBHOOK_URL=https://your-bitrix24-domain.bitrix24.ru/rest/1/your-webhoo
 NUM_CONTACTS=100
 NUM_COMPANIES=100
 
+# OAuth настройки для серверного приложения Битрикс24
+BITRIX24_CLIENT_ID=local.68f61a51897255.41591672
+BITRIX24_CLIENT_SECRET=l0xHY0JBM6Gy5dpCDeTW8IMO1l7mK7ZNGqruUL1Nnz3pbv2GMr
+BITRIX24_REDIRECT_URI=https://amusingly-awaited-starling.cloudpub.ru/bitrix/oauth/callback
+
 # CORS настройки для онлайн работы
 ALLOWED_ORIGINS=*
 
